--- a/feature/.project
+++ b/feature/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Clean Arch Mono</name>
-	<comment>Project Starter Clean Modular created by Buildship.</comment>
+	<name>feature</name>
+	<comment>Project feature created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
